--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+     "import-data": "node src/scripts/import-data.mjs"
   },
   "dependencies": {
+    "@sanity/client": "^6.25.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.70.0",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "next": "14.2.14",
     "next-sanity": "^9.8.39",
     "react": "^18",
