--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-     "import-data": "node src/scripts/import-data.mjs"
+    "import-data": "node src/scripts/import-data.mjs"
   },
   "dependencies": {
     "@sanity/client": "^6.25.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.70.0",
     "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "next": "14.2.14",
     "next-sanity": "^9.8.39",
@@ -23,6 +24,7 @@
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
